--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "antd": "^5.24.5",
+    "axios": "^0.24.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
